syntax = "proto3";

package ares.messaging;

import "google/protobuf/empty.proto";
import "CampaignTemplate.proto";

service AresCampaigns {
	rpc GetAllCampaigns(google.protobuf.Empty) returns (CampaignsResponse);
	rpc GetSingleCampaign(CampaignRequest) returns (CampaignTemplate);

	// rpc AddCampaign(CampaignTemplate) returns (google.rpc.Status);

}

message CampaignRequest {
	string campaign_name = 1; // optional campaisn
}

message CampaignsResponse {
	repeated CampaignTemplate campaign_templates = 1;
}

message RemoveCampaignRequest {

}
