syntax = "proto3";

package ares.core.messages;

import "ParameterMetadata.proto";

message CommandMetadata {
	string name = 1; // Name of the command, registered by a device
	string description = 2; // Helpful text describing the command
	string device_name = 3; // Name of the device to lookup for execution/generation of the command
	repeated ParameterMetadata parameter_metadatas = 4; // Collection of metadata describing parameters/arguments
}